# mocotch

./: .gitignore  CLAUDE.md  README.md  compose.yaml  index.html  package-lock.json  package.json  vite.config.ts
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: git_service.py  main.py  models.py  rpg_service.py
backend/templates/: game-project-README.md  game-project-gitignore
src/: App.css  App.tsx  index.css  types.ts
src/components/: MapEditor.tsx  NPCEditor.tsx  PhaserGame.tsx  SaveDiscardButtons.tsx
src/game/: MainScene.ts  config.ts
src/screens/: AssetsScreen.tsx  EditorScreen.tsx  ProjectListScreen.tsx
